
2007-07-31  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/po.py, bin/tp-robot: Relax the regex for author lines still
	further, but let a failing second tighter check issue a warning.

2007-07-28  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/po.py, bin/tp-robot: Do not take just the first author line,
	but all of them, in preparation for some better diagnostics.

	* bin/tp-robot: Do not bother later translators with changed email
	addresses of earlier translators.  Reorder the checks.

	* bin/tp-robot: Do not compare the last translator with the first
	author but with the last author.

	* bin/tp-robot: Check that the last year in the last author line is
	the current year.  This allows relaxing of the year-matching regex
	to include some future years.

	* lib/run.py: Mark rejection reason more clearly.

2007-07-27  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Put columns in the translators table in order of
	relevance: Assignments first, Personal website last.

	* registry/registry.sgml: Remove the obsolete domain 'gimp-print'.

2007-07-25  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot: Show comments from 'msgfmt' only once.

2007-07-24  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Use magenta also on domain pages to indicate a
	conflict: translation marked as external but PO file is present.

	* lib/localweb.py: Put language name before language code on domain
	pages and on team index, as that is the field the table is sorted on.

	* lib/run.py, bin/tp-robot: Remove "TP-robot" from the subject line
	of the reply email to the translator; remove unused orig_subject.

2007-07-23  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Rename 'GNUnet' to 'gnunet', to be
	consistent and have everything alphabetically.

2007-07-22  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Delete the old, empty teams for Norwegian
	Bokmaal and Norwegian Nynorsk.
