@@ -52,8 +52,8 @@
    his/her team.  One full month is not an overestimate, and you will be
    notified when processing of your disclaimer is complete.
 
-  <p>The file <a href="../registry/AUTHORS"><code>AUTHORS</code></a> holds a copy
-   of all notifications received from the FSF.  The Translation Project robot
+  <p>The file <a href="../AUTHORS"><code>AUTHORS</code></a> holds a copy of
+   all notifications received from the FSF.  The Translation Project robot
    does not read that information directly, however.  See the page for your
    own national team to see what the robot knows about you.</p>
 
